Install default gems and core docs on ruby install

--- a/ruby/install
+++ b/ruby/install
@@ -11,3 +11,7 @@ rbenv install $RUBY_VERSION
 # Update rubygems/bundler:
 gem update --system
 gem install bundler
+gem install solargraph
+gem install rufo
+
+solargraph download-core $RUBY_VERSION
