--- a/ruby/install
+++ b/ruby/install
@@ -13,5 +13,9 @@ gem update --system
 gem install bundler
 gem install solargraph
 gem install rufo
+gem install ruby-debug-ide
+gem install reek
+gem install fasterer
+gem install debride
 
 solargraph download-core $RUBY_VERSION
